Fix: Set 16px spacing between title and description in Why us blocks

--- a/sass/blocks/_why-us.scss
+++ b/sass/blocks/_why-us.scss
@@ -126,7 +126,7 @@
 	font-size: 24px;
 	font-weight: 500;
 	color: $color__text-main;
-	margin: 0 0 $spacing-sm 0;
+	margin: 0 0 $spacing-md 0;
 	line-height: $font__line-height-tight;
 	position: relative;
 	z-index: 1;
