--- a/style.css
+++ b/style.css
@@ -2734,7 +2734,7 @@ a.phone-button:focus,
 	font-size: 24px;
 	font-weight: 500;
 	color: #fff;
-	margin: 0 0 12px 0;
+	margin: 0 0 16px 0;
 	line-height: 1.2;
 	position: relative;
 	z-index: 1;
